tests/neg/inline-trait-signature-parameters-var.scala
inline trait A(var x: Int) // error

class B extends A(1)